--- a/landing3.css
+++ b/landing3.css
@@ -4,7 +4,8 @@ html {
 	font-family: 'Roboto', sans-serif;
 }
 
-media (min-width: 576px) {
+
+@media (min-width: 576px) {
 	html {
 		font-size: 14px;
 	}
