--- a/landing3.css
+++ b/landing3.css
@@ -1,4 +1,4 @@
-Typography */
+/*Typography */
 
 html {
 	font-family: 'Roboto', sans-serif;
@@ -9,7 +9,6 @@ html {
 	html {
 		font-size: 14px;
 	}
-}
 
 @media (min-width: 768px) {
 	html {
@@ -72,16 +71,19 @@ main >.tagline {
 }
 body {
 	background-color: #D04F27;
+	background-image: url(fond.jpg);
 }
 }
 
 .icons-social a {
-	color: ￼#1E1E1E;
+	color: #1E1E1E;
 }
 
 .icons-social a svg path{
-	fill: ￼#1E1E1E;
-}html {
+	fill: #1E1E1E;
+}
+
+html {
   box-sizing: border-box;
   font-size: 12px;
 }
